# game-boy-emu

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md
src/: bus.c  bus.h  cpu.c  cpu.h  main.c  mem.c  mem.h  ppu.h
test/: test.c
